k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - demo.kailas.cloud
      secretName: kailas-cloud-tls
  rules:
    - host: demo.kailas.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 80
